--- a/test.ipynb
+++ b/test.ipynb
@@ -15,13 +15,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%manim -qm CircleToSquare\n",
+    "%%manim -qm -v WARNING SquareToCircle\n",
     "\n",
-    "class CreateCircle(Scene):\n",
-    "    def construct(self):\n",
-    "        circle = Circle()  # create a circle\n",
-    "        circle.set_fill(PINK, opacity=0.5)  # set the color and transparency\n",
-    "        self.play(Create(circle))  # show the circle on screen"
+    "class SquareToCircle(Scene):\n",
+    "   def construct(self):\n",
+    "      square = Square()\n",
+    "      circle = Circle()\n",
+    "      circle.set_fill(PINK, opacity=0.5)\n",
+    "      self.play(Create(square))\n",
+    "      self.play(Transform(square, circle))\n",
+    "      self.wait()"
    ]
   }
  ],
