Animação da Vel. Media criada

--- a/Tutorial1.ipynb
+++ b/Tutorial1.ipynb
@@ -11,30 +11,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 64,
    "id": "55db5692-9679-4d9c-9b0d-df1d5d81c8b5",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.18.0</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m18.0\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from manim import *"
+    "from manim import *\n",
+    "import numpy as np"
    ]
   },
   {
@@ -47,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 65,
    "id": "217b3fa3-5878-425c-acbf-73277be19c87",
    "metadata": {
     "tags": []
@@ -57,13 +42,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                         \r"
+      "                                                                                          \r"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/MovendoCaixa@2024-02-29@17-57-31.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "<video src=\"media/jupyter/MovendoCaixa@2024-03-09@01-56-51.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -102,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 66,
    "id": "a3d06cec-fa99-4580-8494-aeca806d9447",
    "metadata": {
     "tags": []
@@ -112,13 +97,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                        \r"
+      "                                                                                           \r"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<video src=\"media/jupyter/MovendoTransformando@2024-02-29@18-17-11.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
+       "<video src=\"media/jupyter/MovendoTransformando@2024-03-09@01-56-56.mp4\" controls autoplay loop style=\"max-width: 60%;\"  >\n",
        "      Your browser does not support the <code>video</code> element.\n",
        "    </video>"
       ],
@@ -156,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2b03416-b8ff-4cc3-95d0-f8cc4f203cc6",
+   "id": "aed58a1d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -178,7 +163,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
