Animação do Movimento Uniforme concluida

--- a/Aula1/Aula1.ipynb
+++ b/Aula1/Aula1.ipynb
@@ -2,25 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">Manim Community <span style=\"color: #008000; text-decoration-color: #008000\">v0.17.3</span>\n",
-       "\n",
-       "</pre>\n"
-      ],
-      "text/plain": [
-       "Manim Community \u001b[32mv0.\u001b[0m\u001b[32m17.3\u001b[0m\n",
-       "\n"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from manim import *\n",
     "import numpy as np"
@@ -132,6 +116,103 @@
     "        self.play(Create(reta_entre_movel),run_time=2)\n",
     "        self.play(eq5.animate.next_to(reta_entre_movel,UP),run_time=2)\n",
     "        self.wait(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%manim -qh -v WARNING MovimentoUniforme\n",
+    "\n",
+    "def s_norm(s0,s1,v,t):\n",
+    "    return (v*t/(s1-s0))\n",
+    "def lerp(P0,P1,alpha):\n",
+    "    return (1-alpha)*P0+alpha*P1\n",
+    "\n",
+    "class MovimentoUniforme(Scene):\n",
+    "    def construct(self):      \n",
+    "        self.camera.background_color= \"#F5F5DC\"      \n",
+    "        si = 0      \n",
+    "        sf = 10      \n",
+    "        v = 2      \n",
+    "        t = ValueTracker(0)      \n",
+    "        reta = NumberLine([0,10,1],include_tip=False,include_numbers=True).set(color=BLACK).shift(1.5*DOWN)      \n",
+    "        movel = LabeledDot(MathTex(\"m\").set(color=RED_D),color=BLACK).move_to(reta.get_start()+[0,1,0])      \n",
+    "        tempo = always_redraw(lambda: MathTex(\"t = \"+format(t.get_value(),\".1f\")+\"s\").set(color=BLACK).to_corner(UR,buff=1))      \n",
+    "        velocidade = always_redraw(lambda: MathTex(\"v = \"+format(v,\".1f\")+\"m/s\").set(color=BLACK).to_edge(UP,buff=1))      \n",
+    "        espaco = always_redraw(lambda: MathTex(\"s(t) = \"+format(si+v*t.get_value(),\".1f\")+\"m\").set(color=BLACK).to_edge(UL,buff=1))      \n",
+    "        movel.add_updater(lambda x: x.move_to(                    \n",
+    "            lerp(reta.get_start(),reta.get_end(),s_norm(si,sf,v,t.get_value())) + [0,1,0]                    \n",
+    "            ))      \n",
+    "        eq = MathTex(\"s(t) = s_0 + v \\cdot t\",color=BLACK).to_edge(DOWN,buff=0.5)\n",
+    "        self.play(Write(eq))\n",
+    "        self.play(Write(reta))\n",
+    "        self.play(DrawBorderThenFill(movel))\n",
+    "        self.play(Write(tempo),Write(velocidade),Write(espaco))\n",
+    "        self.wait(2)\n",
+    "        self.play(t.animate.set_value(5),run_time=5,rate_func = linear)\n",
+    "        self.wait(2)\n",
+    "        self.play(FadeOut(movel),FadeOut(tempo),FadeOut(velocidade),FadeOut(espaco))      \n",
+    "        si = 8      \n",
+    "        sf = 0      \n",
+    "        v = -2      \n",
+    "        t.set_value(0)            \n",
+    "        tempo = always_redraw(lambda: MathTex(\"t = \"+format(t.get_value(),\".1f\")+\"s\").set(color=BLACK).to_corner(UR,buff=1))      \n",
+    "        velocidade = always_redraw(lambda: MathTex(\"v = \"+format(v,\".1f\")+\"m/s\").set(color=BLACK).to_edge(UP,buff=1))      \n",
+    "        espaco = always_redraw(lambda: MathTex(\"s(t) = \"+format(si+v*t.get_value(),\".1f\")+\"m\").set(color=BLACK).to_edge(UL,buff=1))      \n",
+    "        movel2 = LabeledDot(MathTex(\"m\").set(color=RED_D),color=BLACK).move_to(lerp(reta.get_start(),reta.get_end(),0.8)+[0,1,0])      \n",
+    "        movel2.add_updater(lambda x: x.move_to(                    \n",
+    "            lerp(lerp(reta.get_start(),reta.get_end(),0.8),reta.get_start(),s_norm(si,sf,v,t.get_value())) + [0,1,0]                    \n",
+    "            ))      \n",
+    "        self.play(DrawBorderThenFill(movel2))\n",
+    "        self.play(Write(tempo),Write(velocidade),Write(espaco))\n",
+    "        self.wait(2)\n",
+    "        self.play(t.animate.set_value(4),run_time=4,rate_func = linear)\n",
+    "        self.wait(2)\n",
+    "        self.play(FadeOut(movel2),FadeOut(tempo),FadeOut(velocidade),FadeOut(espaco),FadeOut(reta))\n",
+    "        reta2 = NumberLine([-50,50,10],include_tip=False,include_numbers=True,length = reta.get_length()).set(color=BLACK).shift(1.5*DOWN)\n",
+    "        self.play(Write(reta2))\n",
+    "        si = -25      \n",
+    "        sf = 40      \n",
+    "        v = 13      \n",
+    "        t.set_value(0)            \n",
+    "        tempo = always_redraw(lambda: MathTex(\"t = \"+format(t.get_value(),\".1f\")+\"s\").set(color=BLACK).to_corner(UR,buff=1))      \n",
+    "        velocidade = always_redraw(lambda: MathTex(\"v = \"+format(v,\".1f\")+\"m/s\").set(color=BLACK).to_edge(UP,buff=1))      \n",
+    "        espaco = always_redraw(lambda: MathTex(\"s(t) = \"+format(si+v*t.get_value(),\".1f\")+\"m\").set(color=BLACK).to_edge(UL,buff=1))      \n",
+    "        movel3 = LabeledDot(MathTex(\"m\").set(color=RED_D),color=BLACK).move_to(lerp(reta.get_start(),reta.get_end(),0.8)+[0,1,0])      \n",
+    "        movel3.add_updater(lambda x: x.move_to(                    \n",
+    "            lerp(lerp(reta2.get_start(),reta2.get_end(),0.25),lerp(reta2.get_start(),reta2.get_end(),0.9),s_norm(si,sf,v,t.get_value())) + [0,1,0]                    \n",
+    "            ))\n",
+    "        self.play(DrawBorderThenFill(movel3))\n",
+    "        self.play(Write(tempo),Write(velocidade),Write(espaco))\n",
+    "        self.wait(2)\n",
+    "        self.play(t.animate.set_value(5),run_time=5,rate_func = linear)\n",
+    "        self.wait(2)\n",
+    "        self.play(FadeOut(movel3),FadeOut(tempo),FadeOut(velocidade),FadeOut(espaco))\n",
+    "        si = 30     \n",
+    "        sf = -20      \n",
+    "        v = -10      \n",
+    "        t.set_value(0)            \n",
+    "        tempo = always_redraw(lambda: MathTex(\"t = \"+format(t.get_value(),\".1f\")+\"s\").set(color=BLACK).to_corner(UR,buff=1))      \n",
+    "        velocidade = always_redraw(lambda: MathTex(\"v = \"+format(v,\".1f\")+\"m/s\").set(color=BLACK).to_edge(UP,buff=1))      \n",
+    "        espaco = always_redraw(lambda: MathTex(\"s(t) = \"+format(si+v*t.get_value(),\".1f\")+\"m\").set(color=BLACK).to_edge(UL,buff=1))      \n",
+    "        movel4 = LabeledDot(MathTex(\"m\").set(color=RED_D),color=BLACK).move_to(lerp(reta.get_start(),reta.get_end(),0.8)+[0,1,0])      \n",
+    "        movel4.add_updater(lambda x: x.move_to(                    \n",
+    "            lerp(lerp(reta2.get_start(),reta2.get_end(),0.8),lerp(reta2.get_start(),reta2.get_end(),0.3),s_norm(si,sf,v,t.get_value())) + [0,1,0]                    \n",
+    "            ))\n",
+    "        self.play(DrawBorderThenFill(movel4))\n",
+    "        self.play(Write(tempo),Write(velocidade),Write(espaco))\n",
+    "        self.wait(2)\n",
+    "        self.play(t.animate.set_value(5),run_time=5,rate_func = linear)\n",
+    "        self.wait(2)\n",
+    "        self.play(FadeOut(movel4),FadeOut(tempo),FadeOut(velocidade),FadeOut(espaco),FadeOut(reta2),FadeOut(eq))\n",
+    "        \n",
+    "        obrigado = Text(\"Obrigado pela atenção!\",color=BLACK)\n",
+    "        self.play(Write(obrigado))\n",
+    "        self.wait(2)\n",
+    "        self.play(FadeOut(obrigado))"
    ]
   },
   {
